<resources>
    <string name="app_name">Final Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_cart">购物车</string>
    <string name="menu_drink">饮料</string>
    <string name="menu_stable">主食</string>
    <string name="menu_snack">小吃</string>
    <string name="menu_meat">肉类</string>
    <string name="menu_veg">蔬菜</string>
    <string name="menu_all">全部种类</string>
</resources>