<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_all"/>
        <item
            android:id="@+id/nav_stable"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_stable"/>
        <item
            android:id="@+id/nav_meat"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_meat"/>
        <item
            android:id="@+id/nav_veg"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_veg"/>
        <item
            android:id="@+id/nav_drink"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_drink"/>
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_cart"/>
    </group>
</menu>