<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all">
    <fragment
        android:id="@+id/nav_all"
        android:name="com.example.finalapplication.ui.all.AllFragment"
        android:label="@string/menu_all"
        tools:layout="@layout/fragment_all"/>
    <fragment
        android:id="@+id/nav_stable"
        android:name="com.example.finalapplication.ui.stable.StableFragment"
        android:label="@string/menu_stable"
        tools:layout="@layout/fragment_stable" />
    <fragment
        android:id="@+id/nav_meat"
        android:name="com.example.finalapplication.ui.meat.MeatFragment"
        android:label="@string/menu_meat"
        tools:layout="@layout/fragment_meat" />
    <fragment
        android:id="@+id/nav_veg"
        android:name="com.example.finalapplication.ui.veg.VegFragment"
        android:label="@string/menu_veg"
        tools:layout="@layout/fragment_veg" />
    <fragment
        android:id="@+id/nav_drink"
        android:name="com.example.finalapplication.ui.drink.DrinkFragment"
        android:label="@string/menu_drink"
        tools:layout="@layout/fragment_drink" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.finalapplication.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />
</navigation>